dhclient(8): Enable numbered user class ID option

By adding it to the option priorities table.

PR:		184117
Submitted by:	Lowell Gilbert <freebsd-bugs-local at be-well.ilk.org>
Reported by:	Tomek CEDRO <cederom at tlen.pl>
Reviewed by:	jhb
Differential Revision:	https://reviews.freebsd.org/D7911

Former-commit-id: 713a0e705c8458f6bc51ba3db140740622cb3ab1